--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,8 @@ a {
 }
 
 .about-us-title,
-.contacts-title {
+.contacts-title,
+.page-title {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 47px;
   line-height: 48px;
@@ -161,6 +162,99 @@ a {
 
   background-color: #ffffff;
   border: none;
+}
+
+.breadcrumbs {
+  list-style: none;
+}
+
+.breadcrumbs a,
+.breadcrumbs-current {
+  font-family: "open_sanslight", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 0.01em;
+  color: #000000;
+
+  background-color: #ffffff;
+  border: none;
+  opacity: 0.3;
+}
+
+.breadcrumbs a:hover,
+.breadcrumbs a:focus {
+  opacity: 0.6;
+}
+
+.breadcrumbs a:active {
+  opacity: 0.1;
+}
+
+.filters form {
+font-size: 14px;
+line-height: 40px;
+background-color: #eeeeee;
+}
+
+.filter fieldset {
+  border: none;
+}
+
+.filter legend {
+  font-family: "gilroyextrabold", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 800;
+  color: #000000;
+  letter-spacing: 0.01em;
+
+  background-color: #eeeeee;
+}
+
+.filter ul {
+  list-style: none;
+  letter-spacing: 0.01em;
+}
+
+.filter-input:disabled + label {
+  color: #a6a6a6;
+}
+
+.filter-button {
+  background-color: #eeeeee;
+}
+
+.catalog-list {
+  list-style: none;
+}
+
+.catalog-item-name {
+  font-family: "gilroyextrabold", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 800;
+  color: #000000;
+  letter-spacing: 0.01em;
+
+  background-color: #ffffff;
+}
+
+.catalog-item-price {
+  font-family: "gilroylight", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  color: #464646;
+  letter-spacing: 0.01em;
+
+  background-color: #ffffff;
+}
+
+.catalog-item:hover img,
+.catalog-item:focus img,
+.catalog-item:active img {
+  opacity: 0.7;
 }
 
 .main-footer {
@@ -258,13 +352,3 @@ a {
   background-color: #f2f2f2;
   border: none;
 }
-
-/* .login-form input[type="text"],
-.login-form input[type="password"] {
-  font: inherit;
-  color: #000000;
-  text-transform: uppercase;
-
-  background-color: #f9f6f3;
-  border: 2px solid #000000;
-} */
