index - начал сетку хедера

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@ a {
 }
 
 .header-catalog-menu {
-  background-color: #f7e184;
   line-height: 30px;
 }
 
@@ -351,4 +350,77 @@ background-color: #eeeeee;
 
   background-color: #f2f2f2;
   border: none;
+}
+
+/* ----- Сеточные стили ----- */
+
+* {
+  background: rgba(0, 0, 255, 0.1);
+}
+
+/* html,
+body {
+  min-width: 1122px;
+  min-height: 1750px;
+} */
+
+body {
+  /* Временно для сетки */
+  /* background-image: url("../psd/preview/device-index.jpg");
+  background-size: 1440px auto;
+  background-repeat: no-repeat; */
+}
+
+.main-header {
+}
+.container {
+  box-sizing: border-box;
+  width: 1200px;
+  padding: 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-header.container {
+  display: flex;
+  flex-direction: column;
+
+  box-sizing: border-box;
+  width: 1160px;
+  padding: 0 60px;
+
+  margin-top: 23px;
+  /* Временно для сетки */
+  min-height: 318px;
+}
+
+.main-header-logo-block {
+  /* width: 1160px; */
+  height: 35px;
+  margin-bottom: 35px;
+}
+
+.user-navigation {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.site-navigation {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.header-catalog-menu {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
 }
