catalog - добавил сетку основного блока

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,14 @@ line-height: 40px;
 }
 
 .filter fieldset {
+  margin: 0;
+  padding: 0;
   border: none;
+}
+
+.filter ul {
+  margin: 0;
+  padding: 0;
 }
 
 .filter legend {
@@ -362,8 +369,8 @@ line-height: 40px;
 }
 
 /* ----- Сеточные стили ----- */
-
-/* * {
+/*
+* {
   background: rgba(0, 255, 0, 0.13);
 } */
 
@@ -533,16 +540,20 @@ body {
 
 .page-title {
   margin: 0;
-  margin-left: 60px;
-  margin-bottom: 24px;
   padding: 0;
+  padding-left: 60px;
+  margin-bottom: 25px;
+
+  /* Временно для сетки*/
+  /* min-height: 92px; */
 }
 
 .breadcrumbs {
   display: flex;
   padding: 0;
   margin: 0;
-  margin-bottom: 40px;
+  padding-left: 60px;
+  margin-bottom: 39px;
 }
 
 .catalog-wrapper {
@@ -570,12 +581,35 @@ body {
   width: 1200px;
 }
 
+.filters-column {
+  box-sizing: border-box;
+  width: 348px;
+  min-height: 1288px;
+  padding-left: 80px;
+  padding-right: 28px;
+  background: #efefef;
+  box-shadow: 0 70px #dcdcdc inset;
+}
+
 .filter-title {
   display: inline-block;
   margin: 0;
   padding: 0;
   margin-top: 25px;
   margin-bottom: 248px;
+}
+
+.catalog-column {
+  width: 852px;
+  padding-left: 72px;
+  padding-right: 20px;
+
+  box-shadow: 0 70px #efefef inset;
+}
+
+.sorting {
+  height: 70px;
+  margin-bottom: 70px;
 }
 
 .sorting-title {
@@ -585,21 +619,43 @@ body {
   margin-top: 25px;
 }
 
-.filters-column {
-  box-sizing: border-box;
-  width: 348px;
-  padding-left: 80px;
-  padding-right: 28px;
-  background: #efefef;
-  box-shadow: 0 70px #dcdcdc inset;
+.catalog-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 29px;
+
+  list-style: none;
 }
 
-.catalog-column {
-  width: 852px;
-  padding-left: 72px;
-  padding-right: 20px;
+.catalog-item {
+  width: 360px;
+  margin-right: 40px;
+  margin-bottom: 40px;
 
-  box-shadow: 0 70px #efefef inset;
+  /* Временно для сетки */
+  min-height: 466px;
+  /* background-color: transparent; */
+  /* box-shadow: inset 0 0 0 2px purple; */
+}
+
+.catalog-item:nth-child(2n) {
+  margin-right: 0;
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  min-height: 70px;
+  margin-bottom: 77px;
+}
+
+.pagination-list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 
@@ -618,7 +674,7 @@ body {
   box-sizing: border-box;
   padding-top: 66px;
   padding-bottom: 66px;
-  margin-top: 82px;
+  /* margin-top: 82px; */
 }
 
 .footer-top {
