--- a/css/style.css
+++ b/css/style.css
@@ -369,10 +369,10 @@ line-height: 40px;
 }
 
 /* ----- Сеточные стили ----- */
-/*
+
 * {
   background: rgba(0, 255, 0, 0.13);
-} */
+}
 
 /* html,
 body {
@@ -390,6 +390,9 @@ body {
 .main-header {
 }
 .container {
+  display: flex;
+  flex-direction: column;
+
   box-sizing: border-box;
   width: 1200px;
   padding: 0 20px;
@@ -398,16 +401,15 @@ body {
 }
 
 .main-header.container {
-  display: flex;
-  flex-direction: column;
-
   box-sizing: border-box;
   width: 1160px;
   padding: 0 60px;
 
-  margin-top: 23px;
+  margin-top: 24px;
   /* Временно для сетки */
-  min-height: 318px;
+  min-height: 203px;
+
+  box-shadow: 0 18px #ffffff inset;
 }
 
 .main-header-logo-block {
@@ -452,7 +454,7 @@ body {
   justify-content: flex-start;
   margin: 0;
   padding: 0;
-  margin-bottom: 19px;
+  /* margin-bottom: 19px; */
 
   list-style: none;
 }
@@ -505,11 +507,149 @@ body {
 
 /* Временно скрываем блоки, для которых пока не делаем сетку  */
 .visually-hidden,
-.slider-featured-products,
-.catalog-menu,
-.services,
-.logotypes {
+.header-catalog-block,
+/* .slider-featured-products, */
+.slider-item:not(:first-child),
+.slider-controls,
+.slider-pagination-list
+/* .catalog-menu, */
+/* .services, */
+/* .logotypes */
+{
   display: none;
+}
+
+.slider {
+  min-height: 516px;
+  margin-bottom: 80px;
+}
+
+.slider-list {
+  position: relative;
+
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.slider-item {
+  display: flex;
+  justify-content: space-between;
+
+  box-shadow: 0 113px #f7e296 inset;
+}
+
+.slider-item::before {
+  content: "";
+  position: absolute;
+  left: 600px;
+  top: 39px;
+  width: 100px;
+  height: 7px;
+  background-color: #ffffff;
+}
+
+.slider-left-column {
+  display: flex;
+  width: 560px;
+}
+
+.slider-right-column {
+  width: 560px;
+}
+
+.slider-image {
+  margin: 4px auto;
+}
+
+.slider-item-number {
+  position: absolute;
+  top: -8px;
+  right: 45px;
+
+  font-family: "gilroyextrabold", Arial, sans-serif;
+  font-size: 179.2px;
+  line-height: 179.2px;
+  font-weight: 800;
+  text-align: left;
+  color: #ffffff;
+  letter-spacing: 0.01em;
+
+  background-color: transparent;
+  border: none;
+}
+
+.slider-item-slogan {
+  position: relative;
+  margin: 0px;
+  margin-top: 84px;
+
+  font-family: "gilroyextrabold", Arial, sans-serif;
+  font-size: 47px;
+  line-height: 56px;
+  font-weight: 800;
+  text-align: left;
+  color: #000000;
+  letter-spacing: 0.01em;
+
+  background-color: transparent;
+  border: none;
+}
+
+.slider-item-description {
+  width: 490px;
+  margin: 0;
+  margin-top: 17px;
+
+  letter-spacing: 0.01em;
+}
+
+.slider-item-button {
+  display: block;
+  outline: 1px #888888;
+  width: 220px;
+  height: 40px;
+
+  margin-top: 45px;
+}
+
+.slider-table-head {
+  display: table-row-group;
+
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: 0.01em;
+}
+
+.slider-table-data {
+  display: table-header-group;
+
+  font-family: "gilroylight", Arial, sans-serif;
+  font-size: 36px;
+  line-height: 48px;
+  font-weight: 300;
+  color: #000000;
+  letter-spacing: 0.01em;
+
+  background-color: #ffffff;
+}
+
+
+
+
+.catalog-menu {
+  min-height: 242px;
+  margin-bottom: 80px;
+}
+
+.services {
+  min-height: 388px;
+  margin-bottom: 0;
+}
+
+.logotypes {
+  min-height: 288px;
+  margin-bottom: 0;
 }
 
 .index-columns {
@@ -657,9 +797,6 @@ body {
   margin: 0;
   list-style: none;
 }
-
-
-
 
 /*-----------*/
 
