--- a/css/style.css
+++ b/css/style.css
@@ -379,9 +379,9 @@ line-height: 40px;
 
 /* ----- Сеточные стили ----- */
 
-/* * {
+* {
   background: rgba(0, 255, 0, 0.13);
-} */
+}
 
 /* html,
 body {
@@ -733,6 +733,87 @@ padding: 0;
   min-height: 242px;
   margin-bottom: 80px;
 }
+
+.catalog-menu-list {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  width: 1160px;
+
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.catalog-menu-item {
+  width: 160px;
+  margin-right: 40px;
+
+  font-family: "gilroyextrabold", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 800;
+  letter-spacing: 0.01em;
+
+  background-color: #ffffff;
+}
+
+.catalog-menu-item:nth-child(6) {
+  margin-right: 0;
+}
+
+.catalog-menu-item a {
+  display: flex;
+  flex-direction: column;
+
+  color: #000000;
+  text-decoration: none;
+}
+
+.catalog-menu-item a::before {
+  content: "";
+  width: 160px;
+  height: 160px;
+  margin-bottom: 33px;
+
+  background-color: #f7e296;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.catalog-menu-vr a::before{
+  background-image: url("../img/popular-1.svg");
+  background-position: 31px 50px;
+}
+
+.catalog-menu-monopods a::before{
+  background-image: url("../img/popular-2.svg");
+  background-position: 38px 40px;
+}
+
+.catalog-menu-actioncameras a::before{
+  background-image: url("../img/popular-3.svg");
+  background-position: 49px 37px;
+}
+
+.catalog-menu-fitness a::before{
+  background-image: url("../img/popular-4.svg");
+  background-position: 28px 49px;
+}
+
+.catalog-menu-smartwatches a::before{
+  background-image: url("../img/popular-5.svg");
+  background-position: 55px 30px;
+}
+
+.catalog-menu-quadcopters a::before{
+  background-image: url("../img/popular-6.svg");
+  background-position: 13px 48px;
+}
+
+
 
 .services {
   min-height: 388px;
