--- a/css/style.css
+++ b/css/style.css
@@ -948,12 +948,50 @@ padding: 0;
   display: block;
 }
 
-
-
 .logotypes {
-  min-height: 288px;
-  margin-bottom: 0;
+  /* min-height: 288px; */
+  margin-top: 94px;
+  margin-bottom: 93px;
 }
+
+.logotypes-list {
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.logotypes-item {
+  margin-right: 40px;
+}
+
+.logotypes-item:nth-child(4) {
+  margin-right: 0;
+}
+
+.logotypes-link img.color {
+  display: none;
+}
+
+.logotypes-link:hover img,
+.logotypes-link:focus img
+ {
+  display: none;
+}
+.logotypes-link:hover img.color,
+.logotypes-link:focus img.color {
+  display: block;
+}
+
+
+
+
+
+
+
+
 
 .index-columns {
   display: flex;
